# i7188_example

./: .gitignore  CMakeLists.txt  README.md  TROBLESHOOT.md
lib/: i7188.h
src/: lab1.cpp  lab2.cpp  main.cpp
